headers/ssd_os.h

struct lring_entry {
    void *function;
    void *ctx;
};
typedef int    (ssd_os_extension_fn) (void *context);
typedef int    (ssd_os_ctrl_fn)      (void);
typedef int    (ssd_os_conn_ring_fn) 	  (struct lring_entry *entry);
struct pipeline {
    char  name[32];
    void *internal[2];
};
typedef void (ssd_os_thread) (int cpu, void *context);
int ssd_os_lring_enqueue_m (struct lring *ring, struct lring_entry *entry);
int ssd_os_lring_dequeue   (struct lring *ring, struct lring_entry *entry);
int ssd_os_lring_dequeue_m (struct lring *ring, struct lring_entry *entry);
void ssd_os_lring_print    (struct lring *ring);
/* Connections */
struct pipeline *ssd_os_get_connection (char *connector_name, char *pipe_name);