src/generated_bindings/ssd_os.rs

unsafe extern "C" {
    pub fn ssd_os_lring_enqueue_m(ring: *mut lring, entry: *mut lring_entry) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_lring_dequeue(ring: *mut lring, entry: *mut lring_entry) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_lring_dequeue_m(ring: *mut lring, entry: *mut lring_entry) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn ssd_os_lring_print(ring: *mut lring);
}
unsafe extern "C" {
    pub fn ssd_os_get_connection(
        connector_name: *mut ::core::ffi::c_char,
        pipe_name: *mut ::core::ffi::c_char,
    ) -> *mut pipeline;
}
pub type __builtin_va_list = *mut ::core::ffi::c_char;
